@@ -7,16 +7,16 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	7.70 (gritter) 8/12/06";
+	"@(#)/usr/ucb/otfdump.sl	7.71 (gritter) 8/12/06";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  7.70 (gritter) 8/12/06";
-const char creator[] = "Heirloom Documentation Tools - dpost 7.70 (gritter) 8/12/06";
+static const char sccsid[] USED = "@(#)dpost.sl  7.71 (gritter) 8/12/06";
+const char creator[] = "Heirloom Documentation Tools - dpost 7.71 (gritter) 8/12/06";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	7.70 (gritter) 8/12/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	7.71 (gritter) 8/12/06";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	7.70 (gritter) 8/12/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	7.71 (gritter) 8/12/06";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "7.70";
+const char revision[] = "7.71";
 /* SLIST */
 /*
 ext.h: * Sccsid @(#)ext.h	1.77 (gritter) 8/12/06
@@ -26,7 +26,7 @@ n2.c: * Sccsid @(#)n2.c	1.28 (gritter) 8/9/06
 n3.c: * Sccsid @(#)n3.c	1.141 (gritter) 8/12/06
 n4.c: * Sccsid @(#)n4.c	1.60 (gritter) 8/12/06
 n5.c: * Sccsid @(#)n5.c	1.81 (gritter) 8/12/06
-n7.c: * Sccsid @(#)n7.c	1.92 (gritter) 8/12/06
+n7.c: * Sccsid @(#)n7.c	1.93 (gritter) 8/12/06
 n8.c: * Sccsid @(#)n8.c	1.33 (gritter) 8/6/06
 n9.c: * Sccsid @(#)n9.c	1.61 (gritter) 8/12/06
 ni.c: * Sccsid @(#)ni.c	1.36 (gritter) 8/9/06
